<resources>
    <string name="app_name">Angler NaviMultiLang</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="angler1">Offshore Outsourcing Services</string>
    <string name="angler2">Web Application Development</string>
    <string name="angler3">Mobile App Development Services</string>
    <string name="angler4">E Commerce</string>
    <string name="angler5">DevOps</string>
    <string name="angler6">Testing Services</string>
    <string name="angler7">Design Services</string>
    <string name="angler8">Digital Marketing Services</string>
    <string name="home1">WELCOME TO ANGLER TECHNOLOGIES</string>
    <string name="home2">A pioneering India-based Internet-solutions company with offices worldwide. Our unique Full Service Provider (FSP) solutions model brings you the best of the worlds of Offshore Software Development, E-Business Products and Interactive Media.</string>
    <string name="home3">Partner for Innovation</string>
    <string name="home4">Cutting-edge Business Products</string>
    <string name="home5">Creative Design Solutions</string>
    <string name="Dash">DashBoard</string>
    <string name="Web">WebView</string>
    <string name="View">View</string>
    <string name="Logout">GridView</string>
    <string name="Map">Map</string>
</resources>