<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item1"
            android:icon="@drawable/home"
            android:title="@string/Dash"/>
        <item
            android:id="@+id/nav_item2"
            android:icon="@drawable/web"
            android:title="@string/Web"/>
        <item
            android:id="@+id/nav_item3"
            android:icon="@drawable/view"
            android:title="@string/View"/>
        <item
            android:id="@+id/nav_item4"
            android:icon="@drawable/grid"
            android:title="@string/Logout"/>
        <item
            android:id="@+id/nav_item5"
            android:icon="@drawable/map"
            android:title="@string/Map"/>




        <!-- Add more items as needed -->
    </group>
</menu>
